[package]
name = "chksum-hash-sha2-512-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.7", features = ["arbitrary-derive"] }
chksum-hash-sha2-512 = { path = "..", features = ["fuzzing"] }

[[bin]]
name = "hash"
path = "fuzz_targets/hash.rs"
test = false
doc = false
bench = false

[[bin]]
name = "update"
path = "fuzz_targets/update.rs"
test = false
doc = false
bench = false
